--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -3,10 +3,11 @@
 }
 
 h1 {
+  text-align: center;
   margin-bottom: 5px;
 }
 
-div {
+section {
   border: 2px solid black;
   background-color: #D7D7D7;
   height: 200px;
@@ -18,8 +19,7 @@ div {
 }
 
 p {
-  margin-left: 3px;
-  margin-rigth: 3px;
+  margin: 3px;
 }
 
 /* Simple Responsive Framework. */
@@ -115,43 +115,43 @@ p {
 
 /********** Small devices only **********/
 @media (max-width: 767px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     
   }
-  .col-md-1 {
+  .col-sm-1 {
     width: 8.33%;
   }
-  .col-md-2 {
+  .col-sm-2 {
     width: 16.66%;
   }
-  .col-md-3 {
+  .col-sm-3 {
     width: 25%;
   }
-  .col-md-4 {
+  .col-sm-4 {
     width: 33.33%;
   }
-  .col-md-5 {
+  .col-sm-5 {
     width: 41.66%;
   }
-  .col-md-6 {
+  .col-sm-6 {
     width: 50%;
   }
-  .col-md-7 {
+  .col-sm-7 {
     width: 58.33%;
   }
-  .col-md-8 {
+  .col-sm-8 {
     width: 66.66%;
   }
-  .col-md-9 {
+  .col-sm-9 {
     width: 74.99%;
   }
-  .col-md-10 {
+  .col-sm-10 {
     width: 83.33%;
   }
-  .col-md-11 {
+  .col-sm-11 {
     width: 91.66%;
   }
-  .col-md-12 {
+  .col-sm-12 {
     width: 100%;
   }
 }
